# verify_srcu

./: .gitignore  Makefile.am  README  configure.ac  create_empty_includes.sh  modify_srcu.awk
include/: Makefile.am
include/linux/: Makefile.am  kconfig.h  srcu.h  types.h
src/: Makefile.am  assume.h  atomic.h  barriers.h  cbmc_command.sh  combined_source.c  compile_command.sh  include_srcu.c  int_typedefs.h  locks.h  main.c  misc.c  misc.h  modified_srcu.c  percpu.h  preempt.c  preempt.h  rcu.h  simple_sync_srcu.c  workqueues.h
tests/: Makefile.am  test_script.sh
tests/message_passing/: Makefile.am  no_sync_smp_mb.fail  test.c
tests/percpu/: Makefile.am  test.c
tests/seq_array/: Makefile.am  force_no_seq.fail  no_seq.fail  no_smp_mb.fail  test.c  two_threads.pass
tests/test_script_tests/: 2min_1cpu.fail  2min_2cpu.fail  2min_3cpu.fail  3min_2cpu.fail  3min_3cpu.fail  3min_4cpu.fail  Makefile.am  main.fail  test.c
tests/valtiny_tests/: Makefile.am  test.c
