test_compile_sources += %D%/combined_source.c %D%/include_srcu.c %D%/misc.c
test_compile_sources += %D%/preempt.c

headers += %D%/assume.h %D%/atomic.h %D%/barriers.h %D%/bug_on.h %D%/config.h
headers += %D%/int_typedefs.h %D%/locks.h %D%/misc.h %D%/percpu.h %D%/preempt.h
headers += %D%/rcu.h %D%/workqueues.h
