test_compile_sources += %D%/combined_source.c %D%/include_srcu.c %D%/misc.c
test_compile_sources += %D%/preempt.c %D%/simple_sync_srcu.c

headers += %D%/assume.h %D%/barriers.h %D%/bug_on.h %D%/config.h
headers += %D%/int_typedefs.h %D%/locks.h %D%/misc.h %D%/percpu.h %D%/preempt.h
headers += %D%/workqueues.h
